--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!--BootsStrap CSS-->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="css/styles.css" >
 <head>
     <title>Ristorante Con Fusion</title>
 </head>
@@ -14,7 +15,7 @@
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row">
+            <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -25,8 +26,8 @@
         </div>
     </header>
 
-    <div class="container">
-        <div class="row">
+    <div class="container" >
+        <div class="row row-content">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -37,7 +38,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
@@ -47,7 +48,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -59,21 +60,21 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <div class="row">             
-               <div class="col-4 offset-1 col-sm-2">
+            <div class="row row-header">             
+               <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-7 col-sm-5">
+                <div class="col-6 col-sm-5">
                     <h5>Our Address</h5>
-                    <address>
+                    <address class="address" >
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
@@ -82,8 +83,8 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div>
-                    <div class="col-12 col-sm-4">
+                <div  class="col-12 col-sm-4 align-self-center">
+                    <div class="text-center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -93,7 +94,7 @@
                     </div>
                 </div>
            </div>
-           <div class="row">             
+           <div class="row row-header">             
                 <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
