--- a/aboutus.html
+++ b/aboutus.html
@@ -21,13 +21,13 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar" >
             <span class="navbar-toggler-icon" ></span>
             </button>
-        <a class="navbar-brand mr-auto" href="index.html">Ristorante con Fusion</a>
+        <a class="navbar-brand mr-auto" href="./index.html">Ristorante con Fusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto" >
-                    <li class="nav-item active" ><a class="nav-link" href="#" ><span class="fa fa-home fa-lg"></span> Home</a> </li>
-                    <li class="nav-item" ><a class="nav-link" href="./aboutus.html" ><span class="fa fa-info fa-lg"></span> About</a> </li>
+                    <li class="nav-item" ><a class="nav-link" href="./index.html" ><span class="fa fa-home fa-lg"></span> Home</a> </li>
+                    <li class="nav-item active" ><a class="nav-link" href="#" ><span class="fa fa-info fa-lg"></span> About</a> </li>
                     <li class="nav-item" ><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a> </li>
-                    <li class="nav-item" ><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a> </li>
+                    <li class="nav-item" ><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a> </li>
                 </ul>
             </div>
         </div>
@@ -87,16 +87,16 @@
     <footer class="footer">
         <div class="container">
             <div class="row row-header">             
-               <div class="col-5 offset-1 col-sm-2">
+               <div class="col-5 offset-1 col-sm-3">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#"><span class="fa fa-home fa-lg"> </span> Home</a></li>
-                        <li><a href="./aboutus.html"> <span class="fa fa-info fa-lg"></span> About </a></li>
+                        <li><a href="./index.html"><span class="fa fa-home fa-lg"> </span> Home</a></li>
+                        <li><a href="#"> <span class="fa fa-info fa-lg"></span> About </a></li>
                         <li><a href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                        <li><a href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                        <li><a href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5">
+                <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address class="address" >
 		              121, Clear Water Bay Road<br>
