--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="nav-item active" ><a class="nav-link" href="#" ><span class="fa fa-home fa-lg"></span> Home</a> </li>
                     <li class="nav-item" ><a class="nav-link" href="./aboutus.html" ><span class="fa fa-info fa-lg"></span> About</a> </li>
                     <li class="nav-item" ><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a> </li>
-                    <li class="nav-item" ><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a> </li>
+                    <li class="nav-item" ><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a> </li>
                 </ul>
             </div>
         </div>
@@ -84,12 +84,12 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#"><span class="fa fa-home fa-lg"> </span> Home</a></li>
-                        <li><a href="./aboutus.html"> <span class="fa fa-info fa-lg"></span> About </a></li>
+                        <li><a href="./aboutus.html"> <span class="fa fa-info fa-lg"></span> About</a></li>
                         <li><a href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                        <li><a href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                        <li><a href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5">
+                <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address class="address" >
 		              121, Clear Water Bay Road<br>
