--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                  <!-- <a href="#reservationForm" class="btn btn-warning btn-lg"> Reserve Table
+                   </a> -->
+                    <button class="btn btn-warning reservationForm">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -65,14 +70,17 @@
         </div>
 
         <div class="row row-content">
-            <div class="col-12 col-sm-4 col-md-3">
+            <div class="col-12 col-sm-4 col-md-3 order-first">
                 <h3>This Month's Promotions</h3>
             </div>
-                <div class="col col-sm col-md order-sm-first">
+                <div class="col col-sm col-md ">
                     <div class="media">
                         <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
-                        <div class="media-body">
-                            <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <div class="media-body order-first">
+                            <h2 class="mt-0">
+                                Weekend Grand Buffet
+                                <span class="badge badge-danger">NEW</span>
+                            </h2>
                             <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>   
                         </div>
                    </div>
@@ -91,6 +99,55 @@
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content"  id="reservationForm" name="reservationForm">
+            <div class="col col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="numGuests" class="col-lg-2 col-form-label">Number of Guests</label>
+                                <div class="col-lg-10">
+                                    <label class="radio-inline" for="num1">
+                                        <input class="radio" type="radio"  id="num1" name="numGuests" value="1">1
+                                    </label>
+                                    <label for="num2" class="radio-inline" >
+                                        <input class="radio" type="radio" id="num2" name="numGuests" value="2">2
+                                    </label>
+                                    <label for="num3" class="radio-inline">
+                                        <input class="radio" type="radio"  id="num3" name="numGuests" value="3">3
+                                    </label>
+                                    <label for="num4" class="radio-inline">
+                                        <input class="radio" type="radio" id="num4" name="numGuests" value="4">4
+                                    </label>
+                                    <label for="num5" class="radio-inline">
+                                        <input class="radio" type="radio" id="num5" name="numGuests" value="5">5
+                                    </label>
+                                    <label for="num6" class="radio-inline">
+                                        <input class="radio" type="radio" id="num6" name="numGuests" value="6">6
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="datetime" class="col-12 col-lg-2 col-form-label">Date and Time</label>
+                                <div class="col-12  col-lg-5">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12  col-lg-5">
+                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-lg-2 col-lg-10 ">
+                                    <button  type="submit" class="btn btn-primary btn-lg"> Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
