--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                  <!-- <a href="#reservationForm" class="btn btn-warning btn-lg"> Reserve Table
-                   </a> -->
-                    <button class="btn btn-warning reservationForm">Reserve Table</button>
+                  <a href="#reservationForm" class="btn btn-warning btn-lg"> Reserve Table
+                   </a>
+                   <!--  <button class="btn btn-warning reservationForm">Reserve Table</button>-->
                 </div>
             </div>
         </div>
