--- a/index.html
+++ b/index.html
@@ -70,6 +70,73 @@
         </div>
     </div>
 
+    <div id="reservationModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Reserve a Table</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group form-row">
+                            <label for="numGuests" class="col col-lg-2 col-form-label">Number of Guests</label>
+                            <div class="col col-lg-10">
+                                <label class="radio-inline" for="num1">
+                                    <input class="radio" type="radio"  id="num1" name="numGuests" value="1">1
+                                </label>
+                                <label for="num2" class="radio-inline" >
+                                    <input class="radio" type="radio" id="num2" name="numGuests" value="2">2
+                                </label>
+                                <label for="num3" class="radio-inline">
+                                    <input class="radio" type="radio"  id="num3" name="numGuests" value="3">3
+                                </label>
+                                <label for="num4" class="radio-inline">
+                                    <input class="radio" type="radio" id="num4" name="numGuests" value="4">4
+                                </label>
+                                <label for="num5" class="radio-inline">
+                                    <input class="radio" type="radio" id="num5" name="numGuests" value="5">5
+                                </label>
+                                <label for="num6" class="radio-inline">
+                                    <input class="radio" type="radio" id="num6" name="numGuests" value="6">6
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                                <label for="section" class="col-lg-2 col-form-label">Section</label>
+                                <div class="col-lg-10">
+                                    <div class="btn-group btn-group-toggle" role="group" data-toggle="buttons">
+                                    <label class="btn btn-success btn-lg active" for="nonsmoking">
+                                           <input   type="radio"  id="nonSmoking" autocomplete="off" name="section" value="false" checked>Non-Smoking
+                                    </label>
+                                    <label for="smoking" class="btn btn-danger btn-lg" >
+                                            <input type="radio" id="smoking" autocomplete="off"  name="section" value="true" >Smoking
+                                    </label>
+                                </div>
+                                </div>
+                        </div>
+                        <div class="form-group row">
+                                <label for="datetime" class="col-12 col-lg-2 col-form-label">Date and Time</label>
+                                <div class="col-12  col-lg-5">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12  col-lg-5">
+                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                        </div>
+                        <div class="form-group row">
+                                <div class="offset-lg-2 col-lg-10 ">
+                                    <button type="button" class="btn btn-secondary btn-lg ml-auto" data-dismiss="modal">Cancel</button>
+                                    <button  type="submit" class="btn btn-primary btn-lg"> Reserve</button>
+                                </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -81,7 +148,10 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" href="#reservationForm" class="btn btn-block btn-warning nav-link" data-toggle="tooltip" data-html="true" title="Or Call us at <br><Strong> +852 123456</Strong></br>" data-placement="bottom">Reserve Table</a>
+                    <span class="navbar-text">
+                        <a class="btn btn-block btn-warning nav-link" role="button" data-toggle="modal" data-target="#reservationModal"> Reserve Table </a>
+                    </span>
+                <!--    <a role="button" href="#reservationForm" class="btn btn-block btn-warning nav-link" data-toggle="tooltip" data-html="true" title="Or Call us at <br><Strong> +852 123456</Strong></br>" data-placement="bottom">Reserve Table</a-->
                    <!--  <button class="btn btn-warning reservationForm">Reserve Table</button>-->
                 </div>
             </div>
@@ -135,6 +205,14 @@
                     <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -191,7 +269,7 @@
                 </div>
             </div>
         </div>
-
+<!--
         <div class="row row-content"  id="reservationForm" name="reservationForm">
             <div class="col col-sm-8">
                 <div class="card">
@@ -239,7 +317,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <footer class="footer">
         <div class="container">
@@ -285,10 +363,17 @@
 <script src="node_modules/jquery/dist/jquery.slim.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!--<script>$(document).ready(function(){    $('[data-toggle="tooltip"]').tooltip();});</script>-->
 <script>
 $(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip();
-});
+        $("#myCarousel").carousel( { interval: 2000 } );
+        $('#carouselPause').click(function(){
+            $('#myCarousel').carousel('pause');
+        });
+        $('#carouselPlay').click(function(){
+            $('#myCarousel').carousel('cycle');
+        });
+    });
 </script>
 </body>
 
