--- a/index.html
+++ b/index.html
@@ -205,14 +205,9 @@
                     <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
                             <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                    </button>
                 </div>
             </div>
         </div>
@@ -366,12 +361,18 @@
 <!--<script>$(document).ready(function(){    $('[data-toggle="tooltip"]').tooltip();});</script>-->
 <script>
 $(document).ready(function(){
-        $("#myCarousel").carousel( { interval: 2000 } );
-        $('#carouselPause').click(function(){
-            $('#myCarousel').carousel('pause');
-        });
-        $('#carouselPlay').click(function(){
-            $('#myCarousel').carousel('cycle');
+        $("#myCarousel").carousel( { interval: 2000} );
+        $('#carouselButton').click(function(){
+            if ($('#carouselButton').children('span').hasClass('fa-pause')){
+                    $('#myCarousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                }
+            else if ($('#carouselButton').children('span').hasClass('fa-play')){
+                    $('#myCarousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                };
         });
     });
 </script>
