--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!--BootsStrap CSS-->
+       <!-- build:js js/main.js -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css" >
+    <link rel="stylesheet" href="css/styles.css" >    
+    <!-- endbuild -->
 <head>
     <title>Ristorante Con Fusion</title>
 </head>
@@ -28,7 +30,7 @@
                     <li class="nav-item" ><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a> </li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+                    <a id="loginButton"><span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
         </div>
@@ -40,7 +42,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" id="hideLoginModal" >&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -70,13 +72,13 @@
         </div>
     </div>
 
-    <div id="reservationModal" class="modal fade" role="dialog">
+    <div id="reservationModal" class="modal">
         <div class="modal-dialog modal-lg" role="content">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Reserve a Table</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close"  id="hideReserveModal">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form>
@@ -149,7 +151,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <span class="navbar-text">
-                        <a class="btn btn-block btn-warning nav-link" role="button" data-toggle="modal" data-target="#reservationModal"> Reserve Table </a>
+                        <a class="btn btn-block btn-warning nav-link" role="button" id="reserveButton" > Reserve Table </a>
                     </span>
                 <!--    <a role="button" href="#reservationForm" class="btn btn-block btn-warning nav-link" data-toggle="tooltip" data-html="true" title="Or Call us at <br><Strong> +852 123456</Strong></br>" data-placement="bottom">Reserve Table</a-->
                    <!--  <button class="btn btn-warning reservationForm">Reserve Table</button>-->
@@ -355,27 +357,14 @@
            </div>
         </div>
     </footer>
+    
+<!--<script>$(document).ready(function(){    $('[data-toggle="tooltip"]').tooltip();});</script>-->
+    <!-- build:js js/main.js -->
 <script src="node_modules/jquery/dist/jquery.slim.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<!--<script>$(document).ready(function(){    $('[data-toggle="tooltip"]').tooltip();});</script>-->
-<script>
-$(document).ready(function(){
-        $("#myCarousel").carousel( { interval: 2000} );
-        $('#carouselButton').click(function(){
-            if ($('#carouselButton').children('span').hasClass('fa-pause')){
-                    $('#myCarousel').carousel('pause');
-                    $('#carouselButton').children('span').removeClass('fa-pause');
-                    $('#carouselButton').children('span').addClass('fa-play');
-                }
-            else if ($('#carouselButton').children('span').hasClass('fa-play')){
-                    $('#myCarousel').carousel('cycle');
-                    $('#carouselButton').children('span').removeClass('fa-play');
-                    $('#carouselButton').children('span').addClass('fa-pause');
-                };
-        });
-    });
-</script>
+<script src="js/scripts.js"></script>
+  <!-- endbuild -->
 </body>
 
 </html>
