--- a/ionic/conFusion/src/pages/dishdetail/dishdetail.html
+++ b/ionic/conFusion/src/pages/dishdetail/dishdetail.html
@@ -33,6 +33,18 @@
     </ion-col>
   </ion-row>
 </ion-card>
+
+<ion-fab bottom right [hidden]="favorite">
+  <button ion-fab (click)="addToFavorites()">
+    <ion-icon name="heart-outline"></ion-icon>
+  </button>
+</ion-fab>
+<ion-fab bottom right *ngIf="favorite">
+  <button ion-fab>
+    <ion-icon name="heart"></ion-icon>
+  </button>
+</ion-fab>
+    
 <div [hidden]="dish || errMess">
   <ion-spinner></ion-spinner>
   <h4>Loading . . . Please Wait</h4>
