Ionic Cordova notifications and social sharings

--- a/ionic/conFusion/src/pages/contact/contact.html
+++ b/ionic/conFusion/src/pages/contact/contact.html
@@ -27,11 +27,10 @@
             <ion-icon name="call"></ion-icon>
             <div>CALL</div>
         </button>
-        <button class="button_right" ion-button icon-left clear small>
+        <button ion-button icon-left clear small (click)="sendEmail()">
             <ion-icon name="mail"></ion-icon>
             <div>EMAIL</div>
         </button>
   </ion-card>
   </div>
-  
 </ion-content>
